[package]
name = "rdp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.203", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2" }

[profile.release]
codegen-units = 1
lto = true
